--- a/playmus.css
+++ b/playmus.css
@@ -1,17 +1,30 @@
-* {  padding: 0;  margin: 0;
-  box-sizing: border-box;
+* {  padding: 0;  margin: 0;  box-sizing: border-box;
 }
-body { 
-  background-image: url(fon.webp);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover;
+.butnfon{ display: flex; 
+  padding-left: 3rem; padding-top: 1.5rem;
+  font-size: medium; color: red; margin-left: -4rem;
+  justify-content: space-between;
+  align-items: flex-start;  /* align-items: start !important; */
+} 
+.btn{
+  justify-content: space-between;
+
+}
+.victor{ 
+  display: block;
+  margin-top: 26rem;
+  /* opacity: 0.95; */
+  align-items: center;
+  position: absolute;
+}
+body {  background-image: url(back/victoria.jpg);
+  /* background: radial-gradient(rgb(55, 255, 0), blue); */
   min-height: 100vh;
   overflow: hidden;
+	background-size: cover;
   background-attachment: fixed;
-
-  display: flex;
-  align-items: center;
+  background-position: center;
+  display: flex;  /* align-items: center; */
   justify-content: center;
   min-height: 100vh;
   font-family: "poppins", sans-serif;
@@ -24,7 +37,12 @@ body {
   height: 100%;
   z-index: -1;
 }
-.container { position: absolute;
+.container {  
+  display: block;
+  margin-top: 10rem; color: white;
+  opacity: 0.85;
+  align-items: center;
+  position: absolute;
   background-color: #99c39c;
   width: 400px;
   height: 160px;
@@ -59,7 +77,7 @@ h2 {
   position: absolute;
   top: -25px;
 }
-.player_controls {
+.player_controls { padding-left: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,6 +97,7 @@ h2 {
   font-size: 44px;
 }
 
-#zaonpp{position: absolute; z-index: 3;}
-
+#zaonpp{position: absolute; z-index: 3;
+padding-left: 9.5rem; padding-top: 5rem;
+}
 p{color: #fff;}
