--- a/playmus.css
+++ b/playmus.css
@@ -19,13 +19,6 @@
   justify-content: space-between;
   align-items: flex-start;  /* align-items: start !important; */
 } 
-/* #butn0{ color: red; } */
-/* .victor{ 
-  display: block;
-  margin-top: 26rem; 
-  align-items: center;
-  position: absolute;
-} */
 .victor1{ 
   display: block;
   margin-top: 4rem;   /* opacity: 0.95; */
@@ -40,7 +33,7 @@ button { background-color: transparent;
     outline: none;
 }
 button:hover{color: white;}
-body { background-image: url(back/victoria.jpg);
+body { background-image: url(back/victoria_.jpg);
   /* background: radial-gradient(rgb(55, 255, 0), blue); */
   min-height: 100vh;
   overflow: hidden;
